Fixing center align images

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -130,6 +130,7 @@
     margin: 0;
     font-size: 0;
     margin: 35px -5px -5px -5px;
+    text-align: center;
 
     img {
       box-sizing: border-box;
